--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "blitz-api-auth",
   "version": "1.0.0",
   "scripts": {
-    "dev": "blitz dev",
-    "build": "blitz build",
-    "start": "blitz start",
-    "studio": "blitz prisma studio",
+    "dev": "yarn blitz dev",
+    "build": "yarn blitz build",
+    "start": "yarn blitz start",
+    "studio": "yarn blitz prisma studio",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -26,11 +26,11 @@
   "dependencies": {
     "@prisma/client": "3.15.0",
     "blitz": "0.45.4",
-    "react-dom": "18.0.0",
-    "react": "18.0.0",
-    "zod": "3.17.3",
     "final-form": "4.20.7",
-    "react-final-form": "6.5.9"
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-final-form": "6.5.9",
+    "zod": "3.17.3"
   },
   "devDependencies": {
     "@types/preview-email": "2.0.1",
@@ -38,8 +38,8 @@
     "eslint": "7.32.0",
     "husky": "7.0.4",
     "lint-staged": "11.3.0-beta.2",
-    "prettier-plugin-prisma": "3.14.0",
     "prettier": "2.6.2",
+    "prettier-plugin-prisma": "3.14.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.5",
     "prisma": "3.15.0",
